--- a/css/master.css
+++ b/css/master.css
@@ -416,10 +416,19 @@ body
 {
     background-color: #668DC2;
     width: 75vw;
-    min-height: 19.2vw;
     border-radius: 2.4vw;
     padding-left: 5.2vw;
     margin-bottom: 3.3vw;
+    position: relative;
+}
+
+.courseimg
+{
+    width: 10vw;
+    height: 10vw;
+    position: absolute;
+    right: 6vw;
+    bottom: 6vw;
 }
 
 .coursetitle
@@ -438,27 +447,86 @@ body
     margin-top: 1.0vw;
     font-size: 1.6vw;
     padding-right: 5vw;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+            line-clamp: 4;
+    -webkit-box-orient: vertical;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .courseinfo
 {
-    margin-top: 1.0vw;
+    margin-top: 2.6vw;
+    font-size: 1.3vw;
+
     display: flex;
     flex-direction: column;
-    font-size: 1.2vw;
+
+    padding-right: 5vw;
+    width: 50vw;
 }
 
-.courseauthors
+.courseinfoflex
 {
-    margin-bottom: 0.8vw;
+    display: flex;
+    justify-content: space-between;
 }
 
-.courseauthors:hover 
+.courseinfoflexelement{
+    cursor: pointer;
+}
+
+.courseinfoflexelementfor
+{
+    display: flex;
+    overflow: hidden;
+}
+
+.courseinfofor p
+{
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.courseinfofor p:hover 
 {
     text-decoration: underline;
 }
 
-.coursedate:hover
+.courseauthors
+{
+    cursor: pointer;
+    font-size: 1.3vw;
+    display: flex;
+}
+
+.courseauthorsnames
+{
+    max-width: 50vw;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.courseauthorsnameshover
+{
+    flex-wrap: wrap;
+}
+
+.courseauthorsnames p
+{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-left: 1.5vw;
+    text-wrap: nowrap;
+}
+
+.courseauthorsnames p:hover 
 {
     text-decoration: underline;
 }
@@ -467,15 +535,9 @@ body
 {
     margin-top: 1vw;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding-right: 2.5vw;
     margin-bottom: 1vw;
-}
-
-.courserating img
-{
-    height: 2.7vw;
-    width: auto;
 }
 
 .coursehref 
