--- a/templates/index copy.html
+++ b/templates/index copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Daddy</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="/static/css/master.css">
 </head>
 <body>
     <div id="menu">
@@ -14,14 +14,14 @@
             <a onclick="scrollToId('contactus')">контакты</a>
         </div>
         <div id="menubuttonsdel">
-            <img src="images/verline.svg">
-            <img src="images/verline.svg">
+            <img src="/static/images/verline.svg">
+            <img src="/static/images/verline.svg">
         </div>
     </div>
     <div id="header">
         <div id="headerimage"></div>
-        <img src="images/circle.svg" style="animation: 16s linear 0s infinite circleRotate; position: absolute; width: 6.7vw; right: 10vw; top: 63.3vw;">
-        <img src="images/circle.svg" style="animation: 28s linear 0s infinite circleRotate; position: absolute; width: 9.2vw; left: 38vw; top: 49vw;">
+        <img src="/static/images/circle.svg" style="animation: 16s linear 0s infinite circleRotate; position: absolute; width: 6.7vw; right: 10vw; top: 63.3vw;">
+        <img src="/static/images/circle.svg" style="animation: 28s linear 0s infinite circleRotate; position: absolute; width: 9.2vw; left: 38vw; top: 49vw;">
         <div id="headercontent">
             <div id="headertext">
                 Мы – команда единомышленников, которые верят, что образование должно быть доступным для всех 
@@ -32,12 +32,12 @@
                 </div>
             </div>
             <div id="headerthanks">
-                <img src="images/fefulogo.png" alt="">
+                <img src="/static/images/fefulogo.png" alt="">
                 <div style="margin-left: 25px;">Особая благодарность ДВФУ за поддержку наших идей</div>
             </div>
         </div>
     </div>
-    <img src="images/boat.png" id="headerendboat">
+    <img src="/static/images/boat.png" id="headerendboat">
     <div id="headerend"></div>
     <div id="search">
         <div id="searchtitle">Давай учиться вместе!</div>
@@ -76,14 +76,14 @@
             </div>
         </div>
         <div id="searchdecor">
-            <img src="images/circle1.svg" style="animation: 5s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 4.6vw; right: 8vw; top: 10vw;">
-            <img src="images/circle1.svg" style="animation: 7s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 3.5vw; left: 23vw; bottom: 2vw;">
-            <img src="images/circle1.svg" style="animation: 3s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 2.2vw; left: 10vw; top: 6vw;">
-            <img src="images/circle2.svg" style="animation: 9s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 1.7vw; left: 28vw; top: 12vw;">
-            <img src="images/circle2.svg" style="animation: 11s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 3.7vw; right: 17vw; bottom: 6vw;">
-            <img src="images/circle.svg" style="animation: 19s linear 0s infinite circleRotate; position: absolute; width: 3.1vw; left: 6vw; bottom: 5vw;">
-            <img src="images/circle.svg" style="animation: 14s linear 0s infinite circleRotate; position: absolute; width: 2.5vw; right: 3vw; bottom: 2vw;">
-            <img src="images/circle.svg" style="animation: 23s linear 0s infinite circleRotate; position: absolute; width: 3.6vw; right: 23.5vw; top: 2.5vw;">
+            <img src="/static/images/circle1.svg" style="animation: 5s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 4.6vw; right: 8vw; top: 10vw;">
+            <img src="/static/images/circle1.svg" style="animation: 7s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 3.5vw; left: 23vw; bottom: 2vw;">
+            <img src="/static/images/circle1.svg" style="animation: 3s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 2.2vw; left: 10vw; top: 6vw;">
+            <img src="/static/images/circle2.svg" style="animation: 9s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 1.7vw; left: 28vw; top: 12vw;">
+            <img src="/static/images/circle2.svg" style="animation: 11s ease-in-out 0.02s infinite waveCircles; position: absolute; width: 3.7vw; right: 17vw; bottom: 6vw;">
+            <img src="/static/images/circle.svg" style="animation: 19s linear 0s infinite circleRotate; position: absolute; width: 3.1vw; left: 6vw; bottom: 5vw;">
+            <img src="/static/images/circle.svg" style="animation: 14s linear 0s infinite circleRotate; position: absolute; width: 2.5vw; right: 3vw; bottom: 2vw;">
+            <img src="/static/images/circle.svg" style="animation: 23s linear 0s infinite circleRotate; position: absolute; width: 3.6vw; right: 23.5vw; top: 2.5vw;">
         </div>
     </div>
     <div id="courses">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <img src="images/categories/math.svg" class="courseimg">
+            <img src="/static/images/categories/math.svg" class="courseimg">
             <div class="coursebottom">
                 <div class="courseauthors">
                     <p>Авторы:&nbsp;</p>
@@ -120,7 +120,7 @@
                         <p>Давидчук В.</p>
                     </div>
                 </div>
-                <a href="https://stepik.org/course/225581" target="_blank" rel="noopener noreferrer" class="coursehref">STEPIK <img src="images/coursebutton.png"></a>
+                <a href="https://stepik.org/course/225581" target="_blank" rel="noopener noreferrer" class="coursehref">STEPIK <img src="/static/images/coursebutton.png"></a>
             </div>
         </div>
 
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <img src="images/categories/informat.svg" class="courseimg">
+            <img src="/static/images/categories/informat.svg" class="courseimg">
             <div class="coursebottom">
                 <div class="courseauthors">
                     <p>Авторы:&nbsp;</p>
@@ -154,7 +154,7 @@
                         <p>Трякшин А.А.</p>
                     </div>
                 </div>
-                <a href="https://stepik.org/course/225581" target="_blank" rel="noopener noreferrer" class="coursehref">STEPIK <img src="images/coursebutton.png"></a>
+                <a href="https://stepik.org/course/225581" target="_blank" rel="noopener noreferrer" class="coursehref">STEPIK <img src="/static/images/coursebutton.png"></a>
             </div>
         </div>
         
@@ -175,16 +175,16 @@
             Свяжитесь с нами!
 
             <div id="contactusmail">
-                <img src="images/mailicon.png" style="height: 2.3vw; margin-right: 1.3vw;">
+                <img src="/static/images/mailicon.png" style="height: 2.3vw; margin-right: 1.3vw;">
                 ouremail@yandex.ru
             </div>
-            <!--<div id="contactustelegram">
-                <img src="images/telegramicon.png" style="height: 45px; margin-right: 25px;">
+            <!-- <div id="contactustelegram">
+                <img src="static/images/telegramicon.png" style="height: 45px; margin-right: 25px;">
                 @ourproject
-            </div>-->
+            </div> -->
         </div>
         <div id="footerinfoother">
-            <img src="images/fefulogofull.png" style="height: 5.8vw; margin-top: 7.2vw;">
+            <img src="/static/images/fefulogofull.png" style="height: 5.8vw; margin-top: 7.2vw;">
             <div style="margin-top: 1.8vw; font-size: 1.2vw; margin-left: 1.vw;">
                 https://www.dvfu.ru/
             </div>
@@ -193,6 +193,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="/static/js/index.js"></script>
 </body>
 </html>
