--- a/templates/login.html
+++ b/templates/login.html
@@ -22,5 +22,6 @@
             </ul>
         {% endif %}
     {% endwith %}
+    <a href="{{ url_for('search') }}">Вернуться на главную?</a>
 </body>
 </html>
