--- a/static/css/master.css
+++ b/static/css/master.css
@@ -425,10 +425,6 @@ body
     gap: 2vw;
 }
 
-#courses>li:first-of-type {
-    margin-top: 2vw;
-}
-
 .course
 {
     background-color: #668DC2;
@@ -514,11 +510,8 @@ body
     flex-wrap: wrap;
 }
 
-.courseauthorsnames p
+.courseauthorsnames li
 {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-left: 1.5vw;
     text-wrap: nowrap;
 }
 
@@ -664,7 +657,7 @@ button {
     text-align: center;
 }
 
-#courses>li:nth-child(2) {
+#courses>li:nth-child(2n+1) {
     background-color: #2E5CAE;
 }
 
@@ -686,7 +679,6 @@ input:checked, input:checked + label  {
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    overflow: hidden;
 
     gap: 1.5vw;
 }
@@ -710,9 +702,6 @@ input:checked, input:checked + label  {
     border-radius: 2.4vw;
 
     font-size: 2vw;
-
-    overflow-x: auto;
-    overflow-y: hidden;
 }
 
 .tab.hidden {
@@ -732,4 +721,8 @@ input:checked, input:checked + label  {
 
 html {
     scroll-behavior: smooth;
+}
+
+#submit:hover {
+    text-decoration: underline white;
 }
